<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/ui_design"
        android:id="@+id/tvTitle"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_age"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:ignore="TouchTargetSizeCheck" />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/etAge"
        app:layout_constraintTop_toBottomOf="@+id/etAge"
        android:layout_marginTop="30dp"
        android:id="@+id/toggleButton1"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        app:layout_constraintStart_toEndOf="@id/toggleButton1"
        app:layout_constraintTop_toTopOf="@id/toggleButton1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:id="@+id/chbEnglish"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hindi"
        app:layout_constraintStart_toEndOf="@id/chbEnglish"
        app:layout_constraintTop_toTopOf="@id/toggleButton1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:id="@+id/chbHindi"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/toggleButton1"
        app:layout_constraintTop_toBottomOf="@id/toggleButton1"
        android:id="@+id/rgSex"
        android:layout_marginTop="30dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            android:id="@+id/rbFemale"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            android:id="@+id/rbMale"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/rgSex"
        app:layout_constraintTop_toBottomOf="@id/rgSex"
        android:layout_marginTop="180dp"
        android:text="@string/alert_dialog"
        android:id="@+id/btnAlertDialog"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnAlertDialog"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/progress_dialog"
        android:id="@+id/btnProgressDialog"
        app:layout_constraintStart_toEndOf="@+id/btnAlertDialog"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/btnAlertDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="20sp"
        android:id="@+id/btnNext"/>
</androidx.constraintlayout.widget.ConstraintLayout>
