<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuDemoActivity">

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/enter_your_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvMenu"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etAge"
        android:hint="@string/enter_your_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:inputType="text"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/etName"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>